Very LONG bugfixing session, add user w/ server, server label shown in landscape and userdetails, server can be disabled